# devcontaioner-template-python-pyinstaller

./: example.spec  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
